--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -6,7 +6,7 @@ handlers = java.util.logging.FileHandler
 .level = INFO
 
 # Log file output in a dedicated directory, e.g., /var/log/myapp/
-java.util.logging.FileHandler.pattern = ./RKadeWheelConfig.log
+java.util.logging.FileHandler.pattern = ./RKadeGunConfig.log
 java.util.logging.FileHandler.append=true
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
